# rocket_template

./: .env  .gitignore  Cargo.toml  Rocket.toml  readme.md
database/: Cargo.toml
database/src/: lib.rs
database/src/models/: user.rs
migrations/2019-01-23-193933_initial/: up.sql
src/: main.rs  schema.rs
src/models/: request.rs  user.rs
src/models/user/: from_request.rs
src/rocket_utils/: error.rs  mod.rs
src/view/: auth.rs  mod.rs
templates/: _layout_no_login.html  landing_page.html  login.html  register.html
web/: Cargo.toml
web/src/: main.rs  request.rs  user.rs
web/src/models/: mod.rs  user.rs
web/src/rocket_utils/: error.rs  mod.rs  request.rs
web/src/view/: auth.rs  mod.rs
