[package]
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"
name = "rocket_template"
version = "0.1.0"

[dependencies]
askama = "0.7"
failure = "0.1"
rocket = "0.4"
uuid = "0.7"
chrono = "0.4"
dotenv = "0.13"

[dependencies.diesel]
version = "1.4"
features = ["postgres", "serde_json", "uuidv07", "chrono", "r2d2"]

[dependencies.rocket_contrib]
version = "0.4"
features = ["json", "diesel_postgres_pool"]
